# zentask

./: .gitignore  Cargo.toml  repopack-output.txt  task_6.json
src/: app.rs  main.rs
src/models/: appcommands.rs  mod.rs  subtask.rs  task_state.rs  taskitem.rs
src/ui/: main.rs  mod.rs  sidebar.rs  style.rs  topbar.rs
src/utils/: io.rs
